# collie

./: .gitignore  .readthedocs.yaml  LICENSE  MANIFEST.in  PYPI_RELEASE_CHECKLIST.md  README.md  example_mlp.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
.github/workflows/: ci.yml
collie/: README.md  __init__.py  pipeline.py
collie/_common/: decorator.py  enums.py  exceptions.py  mixin.py  types.py  utils.py
collie/_common/mlflow_model_io/: base_flavor_handler.py  flavor_registry.py  model_flavors.py  model_io.py
collie/abstract/: mlflow.py
collie/common/pytorch/callback/: earlystop.py  model_checkpoint.py
collie/contracts/: event.py  mlflow.py  orchestrator.py  pipeline.py
collie/core/: __init__.py  models.py  types.py
collie/core/enums/: components.py  ml_models.py
collie/core/evaluator/: evaluator.py
collie/core/orchestrator/: orchestrator.py
collie/core/pusher/: pusher.py
collie/core/trainer/: trainer.py
collie/core/transform/: transform.py
collie/core/tuner/: tuner.py
collie/docs/: doc.html
collie/evaluator/: README.md  evaluator.py
collie/helper/pytorch/: trainer.py
collie/helper/pytorch/callback/: earlystop.py  model_checkpoint.py
collie/helper/pytorch/model/: loader.py
collie/orchestrator/: airflow.py  orchestrator.py
collie/orchestrator /: airflow.py
collie/pusher/: pusher.py
collie/trainer/: README.md  pytorch_trainer.py  trainer.py  xgb_trainer.py
collie/transform/: README.md  transform.py
collie/tuner/: README.md  tuner.py  xgb_tuner.py
collie/utils/pytorch/callback/: callback.py  earlystop.py  model_checkpoint.py
deploy/: gunicorn.conf.py  mlflow.db  setup_local_airflow_mlflow.zsh  start_service.sh
docs/: Makefile  README.md  conf.py  core_concepts.rst  data_passing.rst  getting_started.rst  index.rst  requirements.txt
docs/_build/doctrees/: core_concepts.doctree  data_passing.doctree  getting_started.doctree  index.doctree  mlflow_integration.doctree
docs/_build/doctrees/api/: contracts.doctree  core.doctree
docs/_build/html/: .buildinfo  core_concepts.html  data_passing.html  genindex.html  getting_started.html  index.html  mlflow_integration.html  objects.inv  search.html  searchindex.js
docs/_build/html/_sources/: core_concepts.rst.txt  index.rst.txt  mlflow_integration.rst.txt
docs/_build/html/_sources/api/: contracts.rst.txt  core.rst.txt
docs/_build/html/api/: contracts.html  core.html
docs/api/: contracts.rst  core.rst
example/basic/: mlp.ipynb
example/mlp/: mlp.ipynb  train_data.csv
tests/: __init__.py  conftest.py  conftest_new.py  run_tests.py  test_event.py  test_integration.py  test_transformer_improved.py
tests/_common/: test_decorator.py
tests/core/: test_evaluator.py  test_orchestrator.py  test_pusher.py  test_trainer.py  test_transformer.py  test_tuner.py
tests/fixtures/: __init__.py  components.py  helpers.py
tests/integration_tests/: __init__.py
tests/integration_tests/pipelines/: test_pipeline_flows.py
tests/unit_tests/: __init__.py
tests/unit_tests/common/: test_decorator.py
tests/unit_tests/common/mlflow_model_io/: test_base_flavor_handler.py  test_flavor_registry.py  test_model_flavors.py  test_model_io.py
tests/unit_tests/contracts/: test_event.py  test_mlflow.py
tests/unit_tests/core/: test_models.py  test_orchestrator.py
