[metadata]
name = collie-mlops
version = 0.1.0-beta
author = ChingHuanChiu
author_email = stevenchiou8@gmail.com
description = A Lightweight MLOps Framework for Machine Learning Workflows
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ChingHuanChiu/collie
project_urls =
    Homepage = https://github.com/ChingHuanChiu/collie
    Documentation = https://github.com/ChingHuanChiu/collie/blob/main/README.md
    Repository = https://github.com/ChingHuanChiu/collie
    Bug Tracker = https://github.com/ChingHuanChiu/collie/issues
    Changelog = https://github.com/ChingHuanChiu/collie/blob/main/CHANGELOG.md
license = MIT
license_files = LICENSE
keywords = mlops, machine-learning, mlflow, pipeline, orchestration, deep-learning
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Software Development :: Libraries :: Python Modules
    Typing :: Typed

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.10
install_requires =
    mlflow>=2.0.0
    pydantic>=2.0.0
    pandas>=1.3.0
    numpy>=1.20.0

[options.packages.find]
where = .
include = collie*
exclude =
    tests*
    example*
    deploy*
    docs*
    *.tests
    *.tests.*

[options.package_data]
collie = py.typed

[options.extras_require]
sklearn = scikit-learn>=1.0.0
xgboost = xgboost>=1.5.0
pytorch = 
    torch>=1.9.0
    pytorch-lightning>=2.0.0
lightgbm = lightgbm>=3.0.0
transformers = 
    transformers>=4.0.0
    sentence-transformers>=2.0.0
config = 
    PyYAML>=5.4.0
    toml>=0.10.0
dev = 
    pytest>=6.0.0
    pytest-cov>=3.0.0
    pytest-mock>=3.6.0
    black>=22.0.0
    isort>=5.10.0
    flake8>=4.0.0
    mypy>=0.950
    pre-commit>=2.15.0
    twine>=4.0.0
    build>=0.7.0
test = 
    pytest>=6.0.0
    pytest-cov>=3.0.0
    pytest-mock>=3.6.0
docs = 
    sphinx>=4.0.0
    sphinx-rtd-theme>=1.0.0
    sphinx-autodoc-typehints>=1.12.0
    myst-parser>=0.18.0
all = 
    scikit-learn>=1.0.0
    xgboost>=1.5.0
    torch>=1.9.0
    pytorch-lightning>=2.0.0
    lightgbm>=3.0.0
    transformers>=4.0.0
    sentence-transformers>=2.0.0
    PyYAML>=5.4.0
    toml>=0.10.0

# Future CLI support (when implemented)
# [options.entry_points]
# console_scripts =
#     collie = collie.cli:main

[bdist_wheel]
universal = 0

[flake8]
max-line-length = 100
exclude = 
    .git,
    __pycache__,
    .venv,
    venv,
    build,
    dist,
    *.egg-info,
    .tox,
    .mypy_cache
extend-ignore = E203, E266, E501, W503
max-complexity = 18
select = B,C,E,F,W,T4,B9

[mypy]
python_version = 3.10
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = False
disallow_incomplete_defs = False
check_untyped_defs = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
follow_imports = normal
ignore_missing_imports = True

[mypy-mlflow.*]
ignore_missing_imports = True

[mypy-pandas.*]
ignore_missing_imports = True

[mypy-sklearn.*]
ignore_missing_imports = True

[mypy-xgboost.*]
ignore_missing_imports = True

[mypy-lightgbm.*]
ignore_missing_imports = True

[mypy-transformers.*]
ignore_missing_imports = True
